--- a/ContactsAppUI/ContactsAppUI.csproj
+++ b/ContactsAppUI/ContactsAppUI.csproj
@@ -51,28 +51,28 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
-    <Compile Include="EditContacts.cs">
+    <Compile Include="AddEditContactsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EditContacts.Designer.cs">
-      <DependentUpon>EditContacts.cs</DependentUpon>
+    <Compile Include="AddEditContactsForm.Designer.cs">
+      <DependentUpon>AddEditContactsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Main.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main.Designer.cs">
-      <DependentUpon>Main.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EditContacts.resx">
-      <DependentUpon>EditContacts.cs</DependentUpon>
+    <EmbeddedResource Include="AddEditContactsForm.resx">
+      <DependentUpon>AddEditContactsForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Main.resx">
-      <DependentUpon>Main.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
